--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 body{
@@ -19,10 +20,10 @@ body{
     display: flex;
     flex-direction: column;
     /* text-align: left; estava fazendo com que o conteúdo ficasse todo para a esquerda, e não só as palavras dentro do input*/
-    width: 260px;
-    height: 400px;
+    width: 340px;
+    height: 430px;
     border-radius: 24px;
-    padding: 10px 30px;; /*em cima e embaixo, esquerda e direita*/
+    padding: 10px 40px; /*em cima e embaixo, esquerda e direita*/
     box-shadow: 0 0 10px rgba(0,0,0,0.1); /*sombreamento genérico*/
 }
 
@@ -107,7 +108,7 @@ button{
 .input-group input,
 button,
 .extra-links {
-    max-width: 220px; /*limita o conteúdo de dentro do card */
+    max-width: 280px; /*limita o conteúdo de dentro do card */
     width: 100%; /*faz ele se ajustar até esse limite */
     margin-left: auto;
     margin-right: auto;
